--- a/Javascript 개념정리/객체.md
+++ b/Javascript 개념정리/객체.md
@@ -150,3 +150,66 @@ let bag = {
 alert(bag.apple); //fruit 에 "apple"이 할당되었다면, 5가 출력됩니다. 
 ```
 
+```;
+let fruit = prompt("어떤 과일을 구매하시겠습니까?", "apple");
+let bag = {};
+
+//변수 fruit을 사용해 프로퍼티 이름을 만들었습니다. 
+bag[fruit] = 5;
+```
+
+
+
+### 실습
+
+```
+//객체 만들기. 프로퍼티값 삭제하기
+let user = {}
+	user.name: 'John';
+	user.surname: 'Smith';
+    user.name = 'Pete';
+
+delete user.name;
+```
+
+
+
+```
+// 객체에 프로퍼티가 하나도 없는 경우 true, 그렇지 않은 경우 false를 반환해주는 함수 isEmpty(obj)를 만들어 보세요.
+
+let schedule = {};
+alert( isEmpty(schedule) ); //true
+schedule["8:30"] = "get up";
+alert( isEmpty(schedule) ); //false
+------------------------------------------------
+function isEmpty(obj){
+	for(let key in obj){
+	return false;
+}
+return true;
+}
+```
+
+
+
+```
+//프로퍼티 합계 구하기. sum에 저장해주기 
+let salaries = {
+	John : 100,
+	Ann : 160,
+	Pete : 130
+}
+-------------------------------------------------
+function sum(a,b,c){
+	return = a+b+c
+};
+
+let sum = 0;
+for (let key in salaries) {
+	sum += salaries[key];
+}
+
+alert(sum);
+
+```
+
