--- a/Javascript 개념정리/기본 연산자와 수학.md
+++ b/Javascript 개념정리/기본 연산자와 수학.md
@@ -32,3 +32,69 @@ alert('1'+2); //'12'
 alert(2+2+'1'); //'221'이 아니라 '41'이 출력
 ```
 
+
+
+## 단항 연산자 +와 숫자형으로의 변환
+
+```
+//숫자에는 아무런 영향을 끼치지 않습니다. 
+let x = 1;
+alert( +x ); //1
+
+let y = -2;
+alert(+y) //-2
+
+//숫자형이 아닌 피연산자는 숫자형으로 변화합니다. 
+alert( +true ); //1
+alert( +"" ); //0
+```
+
+
+
+```
+//문자열을 숫자로 변환시줄 때
+let apples = "2";
+let oranges = "3";
+
+alert(apples + oranges); //23
+
+//이항 덧셈 연산자가 적용되기 전에, 두 피연산자를 숫자형으로 변화한다. 
+alert( +apples + +oranges); //5
+
+//`Number(...)`를 사용해서 같은 동작을 하는 코드를 작성할 수 있지만, 더 길다. 
+// alert(Number(apples) + Number(oranges) ); //5
+```
+
+
+
+## 연산자 우선순위 
+
+동일한 기호의 단항 연산자는 이항 연산자보다 우선순위가 더 높다. 
+
+
+
+## 증가/감소 연산자
+
+숫자를 하나 늘리거나 줄이는 연산
+
+- 증가 연산자 `++ ` : 변수를 1 증가 시킴
+- 감소 연산자 `-- `: 변수를 1 감소 시킴
+
+주의사항: 증가/감소는 변수에만 쓸 수 있다. `5++`과 같이 사용하면 에러 발생. 
+
+```
+//전위형
+let count_number = 1;
+let a = ++count_number; 
+
+alert(a); //2
+
+//후위형
+let count_number = 1;
+let a = counter++;
+
+alert(a); //1
+```
+
+- 값을 증가시키고 난 후, 증가한 값을 바로 사용하려면 전위형 증가를, 
+- 값을 증가시키지만, 증가 전의 기존값을 사용하려면 후위형 증가 연산자를 사용하면 됩니다. 
