--- a/Javascript 개념정리/javascript 내용 정리/참조,얕은복사,깊은복사.md
+++ b/Javascript 개념정리/javascript 내용 정리/참조,얕은복사,깊은복사.md
@@ -10,3 +10,5 @@ console.log(array === shallowCopy); //false
 console.log(array[0] === shallowCopy[0]); //true
 console.log(array === deepCopy); //false
 
+-> 얕은 복사를 할 때는 ...연산자를 사용합니다. 배열이라면 [...배열]을 하면 되고, 객체라면 {...객체}를 하면 됩니다. 
+
